--- a/index.html
+++ b/index.html
@@ -38,28 +38,31 @@
     <section id="profile">
         <div class="section__pic-container">
             <img
-            src="./assets/profile-pic.png"
-            alt="Yu (Noelle) Lo profile picture"/
-            >
+            src="./assets/profile-pic.jpg"
+            alt="Yu (Noelle) Lo profile picture"
+            class="profile-pic"
+            />
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
-            <hi class="title">Yu (Noelle) Lo</hi>
-            <p class="section__text__p2">Frontend Developer</p>
+            <h1 class="title">Yu (Noelle) Lo</h1>
+            <p class="section__text__p2">Full Stack Developer</p>
             <div class="btn-container">
-                <botton class="btn btn-color-2"
-                onclick="window.open('./assets/resume-example.pdf')"
+                <botton
+                    class="btn btn-color-2"
+                    onclick="window.open('./assets/resume-example.pdf')"
                 >
                     Download CV
                 </botton>
 
-                <botton class="btn btn-color-1"
-                onclick="location.href='./#contact'"
+                <botton
+                    class="btn btn-color-1"
+                    onclick="location.href='./#contact'"
                 >
                     Contact Info
                 </botton>
             </div>
-            <div id="socials-container">
+            <div id="social-container">
                 <img
                 src="./assets/linkedin.png"
                 alt="My LinkedIn profile"
@@ -75,6 +78,306 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.jpg"
+                 alt="Profile Picture"
+                 class="about-pic"
+                />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/uw.png"
+                           alt="Education icon"
+                           class="icon"
+                        />
+                        <h3>Education</h3>
+                        <p>M.S. in Computer Engineering @ <br>University of Washington</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/parexel.png"
+                           alt="experience icon"
+                           class="icon"
+                        />
+                        <h3>Experience</h3>
+                        <p>5+ years <br>Backend & Automation Engineering<br>in pharmaceutical industry</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Hi, I'm Noelle — a full stack software engineer with a background in clinical data engineering.
+                       I spent over five years in the pharmaceutical industry building large-scale ETL pipelines and regulatory-grade tooling using Python, SQL, R, and SAS.
+                       <br><br>Now pursuing my master's in Computer Engineering at the University of Washington, I'm focused on full-stack development and real-world AI applications.
+                       I enjoy creating scalable, user-centered systems and am currently preparing for 2026 software engineering internships.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img
+            src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
+            onclick="location.href='./#experience'"
+        />
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>TypeScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Material UI</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Backend Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Python</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>NodeJS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Express JS</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Java</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                            src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon"
+                            />
+                            <div>
+                                <h3>R</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img
+            src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
+            onclick="location.href='./#projects'"
+        />
+    </section>
+    <section id="projects">
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                            src="./assets/project-1.png"
+                            alt="Project 1"
+                            class="project-img"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                        <botton class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/noellelo/'"
+                        >
+                            Github
+                        </botton>
+                        <botton class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/noellelo/'"
+                        >
+                            Live Demo
+                        </botton>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                            src="./assets/project-2.png"
+                            alt="Project 2"
+                            class="project-img"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <div class="btn-container">
+                        <botton class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/noellelo/'"
+                        >
+                            Github
+                        </botton>
+                        <botton class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/noellelo/'"
+                        >
+                            Live Demo
+                        </botton>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                            src="./assets/project-3.png"
+                            alt="Project 3"
+                            class="project-img"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <div class="btn-container">
+                        <botton class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/noellelo/'"
+                        >
+                            Github
+                        </botton>
+                        <botton class="btn btn-color-2 project-btn"
+                                onclick="location.href='https://github.com/noellelo/'"
+                        >
+                            Live Demo
+                        </botton>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img
+        src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
+        onclick="location.href='./#contact'"
+        />
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img
+                    src="./assets/email.png"
+                    alt="Email icon"
+                    class="icon contact-icon email-icon"
+                />
+                <p><a href="mailto:exampleemail@gmail.com">Example@gmail.com</a>
+                </p>
+            </div>
+            <div class="contact-info-container">
+                <img
+                    src="./assets/linkedin.png"
+                    alt="LinkedIn icon"
+                    class="icon contact-icon"
+                />
+                <p><a href="https://linkedin.com/in/yu-lo/">LinkedIn</a>
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2025 Yu Noelle Lo. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
 
 </body>
